[imad-console] Updates ui/thomas.html

--- a/ui/thomas.html
+++ b/ui/thomas.html
@@ -1,1 +1,8 @@
-
+<!doctype html>
+<html>
+    <head>
+         <title>
+                thomas
+            </title>
+    </head>
+  </html>          
