--- a/ui/thomas.html
+++ b/ui/thomas.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html>
     <head>
-         <title>
-                thomas
-            </title>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
-  </html>          
+    <body>
+        <div class="center">
+            <img src="/ui/ui/madi.png" class="img-medium"/>
+        </div>
+        <br>
+        <div class="center text-big bold">
+              Heloo ,thomas's webapp.
+        </div>
+        <script type="text/javascript" src="/ui/main.js">
+        </script>
+    </body>
+</html>
