--- a/ui/thomas.html
+++ b/ui/thomas.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-              Heloo ,thomas's webapp.
+              fucking nived  dont play with me,,........THOMAS PJ
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
