--- a/ui/thomas.html
+++ b/ui/thomas.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/sunny-leone.jpg" class="img-medium"/>
+            <img id='wow' src="/sunny-leone.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
